k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idaas
  labels:
    name: idaas
    environment: production
